# bavardage

./: .gitignore  AGENTS.md  README.md  README.txt  TODO.md  llm-migration-layer-todo-list.md  llm-migration-layer.md  main_vosk.py  output-algorithm.md  package-migration-plan.md  prompt-area-enhancement.md  pyproject.toml  requirements.txt  start.ps1  start.py  tkwindow.spec
docs/: tkwindow-w11-plan.md
scripts/: build_tkwindow.py
src/: audio_processor.py  base_engine.py  base_processor.py  config.py  console.py  llm_post_processor.py  server.py  server_app.py  session_manager.py  tkwindow.py  tkwindow_bootstrap.py  transcription_buffer.py  vosk_engine.py  whisper_engine.py  whisper_processor.py
src/static/: app.js  audio-processor.js  index.html  output-handler.js  style.css
src/tkwindow/: __init__.py  __main__.py  cli.py  settings.py  window.py
src/tkwindow/audio/: __init__.py  base.py  linux.py  windows.py
src/tkwindow/audio/utils/: amplify.py
src/tkwindow/devices/: __init__.py  linux.py
src/tkwindow/gui/: __init__.py  canvases.py  controls.py
src/tkwindow/renderer/: __init__.py  pool.py
tests/: test_audio_processor.py  test_console.py  test_llm_post_processor.py  test_server.py  test_server_app.py  test_session_manager.py  test_transcription_buffer.py  test_vosk_engine.py  test_whisper_engine.py
